--- a/test-cases.yml
+++ b/test-cases.yml
@@ -17,16 +17,15 @@
     Пользователь должен попасть на главную страницу
 
 - summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
+    Проверка возможности поиска товара по ключевому слову и категории
   requirement: |
-    При неправильном логине или пароле пользователь должен получить сообщение об ошибке
+    При верном вводе ключевого слова и при верной выбранной категории пользователь должен найти нужный товар
   prerequisites:
-    Открыта страница логина
+    Открыта страница магазина
   test-data: |
-    Логин = Логин = hexlet Пароль = badpass
+    Ключевое слово = Food Категория = groceries
   steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку «Войти»
+    - Вводим ключевое слово
+    - Выбираем категорию
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь должен попасть на стр
