--- a/test-cases.yml
+++ b/test-cases.yml
@@ -28,4 +28,4 @@
     - Вводим ключевое слово
     - Выбираем категорию
   expected-result: |
-    Пользователь должен попасть на стр
+    Пользователь должен увидеть товар, который он искал
