--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,31 +1,76 @@
 ---
 - summary: |
-    Краткое описание тест-кейса. Например, проверка входа пользователя с существующими логином и паролем
+    Проверка возможности поиска товара по ключевому слову
   requirement: |
-    Тестируемое требование. Например, при верном вводе логине и пароля пользователь должен войти в систему
-  prerequisites: |
-    Это условия, которые необходимы для проведения тест-кейса. Они должны быть выполнены еще до запуска тест-кейса.
-    Например, открыта страница логина
-  test-data: |
-    Тестовые данные
-    Логин = ilona Пароль = password
-  steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку «Войти»
-  expected-result: |
-    Пользователь должен попасть на главную страницу
-
-- summary: |
-    Проверка возможности поиска товара по ключевому слову и категории
-  requirement: |
-    При верном вводе ключевого слова и при верной выбранной категории пользователь должен найти нужный товар
+    При вводе ключевого слова, пользователь должен найти соответсвующий данному ключевому слову товар
   prerequisites:
-    Открыта страница магазина
+    Открыта начальная страница магазина
   test-data: |
-    Ключевое слово = Food Категория = groceries
+    Ключевое слово = Food
   steps:
     - Вводим ключевое слово
-    - Выбираем категорию
   expected-result: |
-    Пользователь должен увидеть товар, который он искал
+    Пользователь должен увидеть товар, который соответсвует ключевому слову
+
+- summary: |
+    Проверка возможности поиска товара по выбранной категории
+  requirement: |
+    При выбранной категории, пользователь должен найти соответсвующий данной категории товар
+  prerequisites:
+    Открыта начальная страница магазина
+  test-data: |
+    Категория = groceries
+  steps:
+    - Выбираем нужную категорию 
+  expected-result: |
+    Пользователь должен увидеть товар, который соответсвует выбранной категории
+
+- summary: |
+    Проверка возможности фильтровать товары 
+  requirement: |
+    При выбранном фильтре, пользователь должен найти соответсвующий этому фильтру товар
+  prerequisites: |
+    Открыта начальная страница магазина
+  test-data: |
+    Brand = Calvin Klein
+  steps:
+    - Выбираем нужный фильтр
+  expected-result: |
+    Пользователь должен увидеть товар, который соответствует выбранному фильтру
+
+- summary: |
+    Проверка возможности просматривать товары и подробную информацию о товаре
+  requirement: |
+    Пользователь должен просматривать существующие товары и подробную информацию об каждом из них
+  prerequisites: |
+    Открыта начальная страница магазина
+  test-data: |
+    Товар = Milk
+  steps:
+    - Просматриваем содержание страницы
+    - Нажимаем на кнопку Next
+    - Просматриваем содержание страницы
+    - Нажимаем на карточку нужного товара
+    - Просматриваем подробную информацию о товаре
+  expected-result: |
+    Пользователь должен найти нужный товар и подробную информацию о нём
+
+- summary: |
+    Проверка возможности добавлять товары в корзину и просматривать содержимое корзины
+  requirement: |
+    Пользователь должен добавлять товары в корзину и просматривать содержимое корзины
+  prerequisites: |
+    Открыта начальная страница магазина
+  test-data: |
+    Товар = Apple Товар = Kiwi
+  steps:
+    - Просматриваем содержание страницы
+    - Нажимаем на кнопку Add to cart
+    - Просматриваем содержание страницы
+    - Нажимаем на кнопку Add to cart
+    - Нажимаем на кнопку Cart
+    - Просматриваем содержание страницы
+  expected-result: |
+    Пользователь должен добавить нужный товар в корзину и просматривать её содержание
+
+
