--- a/test-cases.yml
+++ b/test-cases.yml
@@ -26,7 +26,7 @@
     Пользователь должен увидеть товар, который соответсвует выбранной категории
 
 - summary: |
-    Проверка возможности фильтровать товары 
+    Проверка возможности фильтрации товаров
   requirement: |
     При выбранном фильтре, пользователь должен найти соответсвующий этому фильтру товар
   prerequisites: |
@@ -39,9 +39,9 @@
     Пользователь должен увидеть товар, который соответствует выбранному фильтру
 
 - summary: |
-    Проверка возможности просматривать товары и подробную информацию о товаре
+    Проверка возможности просмотра товаров
   requirement: |
-    Пользователь должен просматривать существующие товары и подробную информацию об каждом из них
+    Пользователь должен просмотреть существующий товар
   prerequisites: |
     Открыта начальная страница магазина
   test-data: |
@@ -50,27 +50,50 @@
     - Просматриваем содержание страницы
     - Нажимаем на кнопку Next
     - Просматриваем содержание страницы
-    - Нажимаем на карточку нужного товара
-    - Просматриваем подробную информацию о товаре
   expected-result: |
-    Пользователь должен найти нужный товар и подробную информацию о нём
+    Пользователь должен просмотреть существующий товар
 
 - summary: |
-    Проверка возможности добавлять товары в корзину и просматривать содержимое корзины
+    Проверка возможности просмотра подробной информацию о товаре
   requirement: |
-    Пользователь должен добавлять товары в корзину и просматривать содержимое корзины
+    Пользователь должен просмотреть подробную информацию о товаре
   prerequisites: |
     Открыта начальная страница магазина
   test-data: |
-    Товар = Apple Товар = Kiwi
+    Товар = Powder Canister
+  steps:
+    - Нажимаем на карточку нужного товара
+    - Просматриваем подробную информацию о товаре
+  expected-result: |
+    Пользователь должен просмотреть подробную информацию о нужном товаре
+
+
+- summary: |
+    Проверка возможности добавления товаров в корзину
+  requirement: |
+    Пользователь должен добаить товар в корзину 
+  prerequisites: |
+    Открыта начальная страница магазина
+  test-data: |
+    Товар = Apple 
   steps:
     - Просматриваем содержание страницы
     - Нажимаем на кнопку Add to cart
-    - Просматриваем содержание страницы
-    - Нажимаем на кнопку Add to cart
+  expected-result: |
+    Пользователь должен добавить нужный товар в корзину
+
+- summary: |
+    Проверка возможности просмотра содержимого корзины
+  requirement: |
+    Пользователь должен просмотреть содержимое корзины
+  prerequisites: |
+    Открыта начальная страница магазина
+  test-data: |
+    Товар = Kiwi
+  steps:
     - Нажимаем на кнопку Cart
     - Просматриваем содержание страницы
   expected-result: |
-    Пользователь должен добавить нужный товар в корзину и просматривать её содержание
+    Пользователь должен просмотреть содержимое корзины
 
 
