--- a/requirements.yml
+++ b/requirements.yml
@@ -9,8 +9,12 @@ non-functional:
   - Сайт должен быть безопасным и защищать данные пользователя
   - Сайт должен иметь мобильную версию
   - Сайт нужно протестировать на совместимость с последними версиями браузеров
-  - Важно, чтобы сайт мог обрабатывать большое количество трафика
+  - Cайт должен обрабатывать большое количество трафика
   - Сайт должен быть доступен на различных устройствах
 implicit:
-  - Требование 5
-  - Требование 6
+  - При оформлении заказа пользователь должен быть зарегистрирован и авторизован
+  - При оформлении заказа у пользователя должны быть указаны контактные данные
+  - Цена товара не может быть нулем или отрицательным числом
+  - Количество товара не может быть дробным числом
+  - Количество товара не может быть отрицательным числом
+  - Товар нельзя положить в корзину, если его количество равно 0
