--- a/test-cases.yml
+++ b/test-cases.yml
@@ -8,7 +8,7 @@
   test-data: |
     Ключевое слово = Food
   steps:
-    - Вводим ключевое слово
+    - Вводим ключевое слово в форме поиска
   expected-result: |
     Пользователь должен увидеть товар, который соответсвует ключевому слову
 
@@ -62,6 +62,7 @@
   test-data: |
     Товар = Powder Canister
   steps:
+    - Просматриваем содержание страницы
     - Нажимаем на карточку нужного товара
     - Просматриваем подробную информацию о товаре
   expected-result: |
