--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,1 +1,15 @@
-
+---
+- summary: |
+    В списке категорий отображаются только те категории товаров, которые находятся на открытой странице магазина
+  environment: |
+    Microsoft Edge Версия 130.0.2849.56 (Официальная сборка) (64-разрядная версия)
+    ОС Windows 10
+  steps-to-reproduce: |
+    - Окрыть страницу магазина
+    - Просматриваем содержание категории
+    - Нажимаем на кнопку Next
+    - Просматриваем содержание категории
+  expected-result: |
+    В списке должны отображаться все категории, представленные в магазине
+  actual-result: |
+    В списке отображаются только те категории, которые находятся на открытой странице магазина
