--- a/test-cases.yml
+++ b/test-cases.yml
@@ -45,7 +45,7 @@
   prerequisites: |
     Открыта начальная страница магазина
   test-data: |
-    Товар = iPhone 13 Pro
+    Товар = Milk
   steps:
     - Просматриваем содержание страницы
     - Нажимаем на кнопку Next
